# familyplanner

./: .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_NOTES.md  README.md  REQUESTS.md  SPEC.md  pyproject.toml  requirements.txt  supervisord.conf  uwsgi.ini  wsgi.py
familyplanner/: __init__.py  app.py  config.py  models.py
familyplanner/domain/: __init__.py  recurring.py  week.py
familyplanner/static/: style.css
familyplanner/templates/: base.html
familyplanner/templates/auth/: login.html  register.html
familyplanner/templates/calendar/: create_entry.html  create_recurring_template.html  edit_entry.html  edit_recurring_template.html  view_entry.html  week.html
familyplanner/web/: __init__.py  auth.py  calendar.py
scripts/: install-familyplanner-service.sh  quality-check.sh
tests/: test_app.py
