[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "familyplanner"
version = "0.1.0"
description = "A family task and event planner"

[tool.ruff]
line-length = 100
target-version = "py38"
include = ["familyplanner/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (Black handles this)
    "ARG001", # Unused function argument (common in Flask routes)
    "ARG002", # Unused method argument
]

[tool.ruff.lint.isort]
known-first-party = ["familyplanner"]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | instance
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = ["B101"]  # assert_used - allowed in test code
